[gd_scene load_steps=6 format=3 uid="uid://ofhvjyfvvrf0"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_73s4y"]
[ext_resource type="Shader" path="res://menu/menu.gdshader" id="2_lsh5p"]
[ext_resource type="Theme" uid="uid://d1ji1k3i10sjo" path="res://default-theme.tres" id="3_3xlwc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xfj0l"]
shader = ExtResource("2_lsh5p")

[sub_resource type="LabelSettings" id="LabelSettings_ln60u"]
font_size = 32

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_73s4y")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_xfj0l")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.0392157, 0.168627, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.5
offset_top = -221.5
offset_right = 364.5
offset_bottom = 221.5
grow_horizontal = 2
grow_vertical = 2

[node name="HighScoreLabel" type="Label" parent="ColorRect/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("3_3xlwc")
text = "Current Highscore: 0"
label_settings = SubResource("LabelSettings_ln60u")
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3xlwc")
theme_override_font_sizes/font_size = 80
text = "Play"

[node name="SwitchFullscreenWindowButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3xlwc")
theme_override_font_sizes/font_size = 80
text = "Enter Fullscreen"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3xlwc")
theme_override_font_sizes/font_size = 80
text = "Quit"

[connection signal="pressed" from="ColorRect/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/SwitchFullscreenWindowButton" to="." method="_on_switch_fullscreen_window_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
